--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "React native navigation made easy using redux",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint .",
     "test": "test"
   },
   "repository": {
