--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-redux-navigation",
-  "version": "0.0.1",
+  "name": "react-native-renavigate",
+  "version": "0.0.0",
   "description": "React native navigation made easy using redux",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wolox/react-native-redux-navigation.git"
+    "url": "git+https://github.com/wolox/react-native-renavigate.git"
   },
   "keywords": [
     "react-native",
@@ -21,9 +21,9 @@
   "author": "Sebastian Balay <sebastian.balay@wolox.com.ar>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/wolox/react-native-redux-navigation/issues"
+    "url": "https://github.com/wolox/react-native-renavigate/issues"
   },
-  "homepage": "https://github.com/wolox/react-native-redux-navigation#readme",
+  "homepage": "https://github.com/wolox/react-native-renavigate#readme",
   "dependencies": {
     "react": "^15.4.2",
     "react-native": "^0.40.0",
