--- a/Example/package.json
+++ b/Example/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"react": "~15.4.0-rc.4",
 		"react-native": "0.40.0",
+		"react-native-renavigate": "^0.0.0",
 		"react-redux": "^5.0.2",
 		"redux": "^3.6.0",
 		"seamless-immutable": "^7.0.1"
