--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-renavigate",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "React native navigation made easy using redux",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/wolox/react-native-renavigate#readme",
   "dependencies": {
+    "babel-cli": "^6.18.0",
     "react": "^15.4.2",
     "react-native": "^0.40.0",
     "react-redux": "^5.0.2",
