--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "react-native-renavigate",
   "version": "0.0.3",
   "description": "React native navigation made easy using redux",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "lint": "eslint .",
     "test": "test",
-    "build": "babel src --out-dir lib",
+    "build": "babel index.js -d lib && babel src -d lib/src",
     "prepublish": "npm run build"
   },
   "repository": {
@@ -27,7 +27,6 @@
   },
   "homepage": "https://github.com/wolox/react-native-renavigate#readme",
   "dependencies": {
-    "babel-cli": "^6.18.0",
     "react": "^15.4.2",
     "react-native": "^0.40.0",
     "react-redux": "^5.0.2",
@@ -35,6 +34,7 @@
     "seamless-immutable": "^7.0.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.18.0",
     "babel-eslint": "^7.1.1",
     "eslint": "^3.13.1",
     "eslint-plugin-react": "^6.9.0"
