--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-renavigate",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "React native navigation made easy using redux",
   "main": "lib/index.js",
   "scripts": {
@@ -17,6 +17,7 @@
     "react-native",
     "react",
     "navigation",
+    "router",
     "redux",
     "navigator"
   ],
