--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-renavigate",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "React native navigation made easy using redux",
   "main": "lib/index.js",
   "scripts": {
@@ -28,19 +28,19 @@
   },
   "homepage": "https://github.com/wolox/react-native-renavigate#readme",
   "dependencies": {
-    "react": "^15.4.2",
     "react-native-scrollable-tab-view": "^0.6.0",
-    "react-redux": "^5.0.2",
-    "redux": "^3.6.0",
     "seamless-immutable": "^7.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-eslint": "^7.1.1",
+    "babel-preset-react-native": "^1.9.1",
     "eslint": "^3.13.1",
     "eslint-plugin-react": "^6.9.0"
   },
   "peerDependencies": {
-    "react-native": "^0.40.0"
+    "react-native": "^0.40.0",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0"
   }
 }
