--- a/package.json
+++ b/package.json
@@ -29,8 +29,14 @@
   },
   "homepage": "https://github.com/wolox/react-native-renavigate#readme",
   "jest": {
-    "testPathIgnorePatterns": ["/node_modules/", "/Examples"],
-    "collectCoverageFrom": ["src/**/*.js"]
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/Examples",
+      "/lib"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.js"
+    ]
   },
   "dependencies": {
     "react-native-scrollable-tab-view": "^0.6.0",
@@ -43,7 +49,9 @@
     "babel-preset-react-native": "^1.9.1",
     "eslint": "^3.13.1",
     "eslint-plugin-react": "^6.9.0",
-    "jest": "^18.1.0"
+    "jest": "^18.1.0",
+    "react": "^15.4.2",
+    "react-native": "^0.40.0"
   },
   "peerDependencies": {
     "react-native": "^0.40.0",
