--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "testRegex": ".*\\.spec\\.js$"
   },
   "dependencies": {
+    "prop-types": "^15.6.0",
+    "react-native-deprecated-custom-components": "^0.1.1",
     "react-native-scrollable-tab-view": "^0.6.0",
     "seamless-immutable": "^7.0.1"
   },
