--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   },
   "dependencies": {
     "prop-types": "^15.6.0",
-    "react-native-deprecated-custom-components": "^0.1.1",
+    "react-native-custom-components": "git://github.com/facebookarchive/react-native-custom-components.git",
     "react-native-scrollable-tab-view": "^0.6.0",
     "seamless-immutable": "^7.0.1"
   },
